--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ libm = "0.2.8"
 plotters = "0.3"  
 egui_plot = "0.23"
 eframe = "0.23"
+tokio = { version = "1", features = ["full"] }
+futures = "0.3"
