--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ egui_plot = "0.23"
 eframe = "0.23"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
+rfd = "0.12"    # For file dialogs
+csv = "1.1"     # For CSV parsing
