--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ tokio = { version = "1", features = ["full"] }
 futures = "0.3"
 rfd = "0.12"    # For file dialogs
 csv = "1.1"     # For CSV parsing
+serde_json = "1.0"
+rand = "0.8"        # For random number generation
+rand_distr = "0.4" 
