--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,14 @@ path = "src/lib.rs"
 
 [dependencies]
 serde = { version = "1.0.214", features = ["derive"] }
-libm = "0.2.8"
-plotters = "0.3"  
+serde_json = "1.0"
+csv = "1.1"     
+
 egui_plot = "0.23"
 eframe = "0.23"
 tokio = { version = "1", features = ["full"] }
-futures = "0.3"
-rfd = "0.12"    # For file dialogs
-csv = "1.1"     # For CSV parsing
-serde_json = "1.0"
-rand = "0.8"        # For random number generation
+rfd = "0.12"    
+
+rand = "0.8"        
 rand_distr = "0.4" 
+libm = "0.2.8"
